<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/background"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="55px"
		android:gravity="center"
	    >
	    <ImageView  
			android:id="@+id/shift1"
			android:layout_width="50px" 
			android:layout_height="50px" 
			android:background="@drawable/off_light"
			 />
	    <ImageView  
			android:id="@+id/shift2"
			android:layout_width="50px" 
			android:layout_height="50px" 
			android:background="@drawable/off_light"
			 />
	    <ImageView  
			android:id="@+id/shift3"
			android:layout_width="50px" 
			android:layout_height="50px" 
			android:background="@drawable/off_light"
			 />
	    <ImageView  
			android:id="@+id/shift4"
			android:layout_width="50px" 
			android:layout_height="50px" 
			android:background="@drawable/off_light"
			 />
	    <ImageView  
			android:id="@+id/shift5"
			android:layout_width="50px" 
			android:layout_height="50px" 
			android:background="@drawable/off_light"
			 />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="220px"
		    android:layout_height="fill_parent"
			android:gravity="center"
		    >
		    <ImageView  
				android:id="@+id/anim"
			    android:layout_width="200px" 
			    android:layout_height="220px" 
			    android:background="@drawable/sonic_stand"
			    />
			<TextView  
				android:id="@+id/load"
				android:layout_width="100px" 
				android:layout_height="wrap_content" 
				android:text="@string/init_load"
				android:textSize="50px"
				android:gravity="center|top"
		    	android:textColor="@color/text"
				    />
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
			android:gravity="center"
		    >
	
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="185px"
			    android:gravity="center"
			    >
				<TextView  
					android:id="@+id/rpm"
				    android:layout_width="300px" 
				    android:layout_height="fill_parent" 
				    android:text="@string/init_rpm"
				    android:textSize="130px"
				    android:gravity="center_vertical|right"
		    		android:textColor="@color/text"
				    />
				<TextView  
					android:id="@+id/unit_rpm"
				    android:layout_width="50px" 
				    android:layout_height="fill_parent" 
				    android:text="@string/unit_rpm"
				    android:textSize="20px"
				    android:gravity="center"
		    		android:textColor="@color/text"
		    		android:layout_marginTop="43px"
				    />
			</LinearLayout>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="185px"
				android:gravity="right"
			    >
				<TextView  
					android:id="@+id/voltage"
				    android:layout_width="250px" 
				    android:layout_height="fill_parent" 
				    android:text="@string/init_voltage"
				    android:textSize="70px"
				    android:gravity="center_vertical|right"
				    android:layout_margin="10px"
		    		android:textColor="@color/text"
				    />
				<TextView  
					android:id="@+id/temp"
				    android:layout_width="250px" 
				    android:layout_height="fill_parent" 
				    android:text="@string/init_temp"
				    android:textSize="70px"
				    android:gravity="center_vertical|right"
				    android:layout_margin="10px"
		    		android:textColor="@color/warning"
				    />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
